--- a/.github/workflows/generate-ascii.yml
+++ b/.github/workflows/generate-ascii.yml
@@ -9,13 +9,7 @@ jobs:
         steps:
         - name: Checkout Repo
           uses: actions/checkout@v4
-        - name: Install Cowsay Program
-          run: sudo apt-get install cowsay -y
-        - name: Execute Cowsay CMD
-          run: cowsay -f dragon "Run for cover, I am a Dragon....RAWR" >> dragon.txt
-        - name: Test File Exists
-          run: grep -i "dragon" dragon.txt
-        - name: Read File
-          run: cat dragon.txt
-        - name: Checkout repo files
+        - name: List repo files
           run: ls -ltra
+        - name: Executin Shell Script
+          run: ./ascii-script.sh
