--- a/.github/workflows/use-workflow.yaml
+++ b/.github/workflows/use-workflow.yaml
@@ -12,6 +12,6 @@ jobs:
             echo "Let's see if it works"
     workflow:
       needs: job1
-      if: !cancelled()
+      if: success() || failure() || cancelled()
       uses: ./.github/workflows/generate-ascii.yaml
       secrets: inherit
